# tgproxy

./: .gitignore  LICENSE  README.md  build.spec  pyproject.toml  requirements.txt  run_tray.py
assets/: make_icon.py
tests/: test_cli.py  test_config.py  test_core.py  test_front_ip.py  test_port.py  test_settings_parse.py  test_tray_smoke.py  test_websocket.py
tgproxy/: __init__.py  __main__.py  config.py  server.py  settings.py  shortcut.py  single_instance.py  telegram.py  tray.py  websocket.py  welcome.py
tgwsproxy/: __init__.py  __main__.py  bridge.py  config.py  mtproto.py  server.py  shortcut.py  socks5.py  telegram.py  tray.py  websocket.py  welcome.py
