[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-ws-proxy"
version = "0.1.0"
description = "Local SOCKS5 proxy that bridges Telegram over WebSocket"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MOXY1337" }]
dependencies = ["cryptography>=42.0"]

[project.optional-dependencies]
gui = ["pystray>=0.19", "pillow>=10.0", "customtkinter>=5.2"]

[project.scripts]
tgwsproxy = "tgwsproxy.__main__:main"
tgwsproxy-tray = "tgwsproxy.tray:main"

[tool.setuptools.packages.find]
include = ["tgwsproxy*"]
